[package]
name = "kotoba-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed execution engine for Kotoba graph processing system"
keywords = ["distributed", "graph", "processing", "tokio", "cluster"]
categories = ["concurrency", "network-programming", "data-structures"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-distributed"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-core = { path = "../kotoba-core", version = "0.1.19" }
kotoba-graph = { path = "../kotoba-graph", version = "0.1.17" }
kotoba-execution = { path = "../kotoba-execution", version = "0.1.16" }
kotoba-rewrite = { path = "../kotoba-rewrite", version = "0.1.16" }
kotoba-cid = { path = "../kotoba-cid", version = "0.1.16" }

# Async runtime
tokio = { version = "1.0", features = ["sync", "rt", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
