[package]
name = "kotoba-event-stream"
version = "0.1.0"
edition = "2021"
description = "Kafka-based event streaming for KotobaDB"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Kotoba types
kotoba-types = { path = "../kotoba-core" }
kotoba-errors = { path = "../kotoba-errors" }
