[package]
name = "kotoba-event-stream"
version = "0.1.0"
edition = "2021"
description = "RocksDB-based event streaming for KotobaDB"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# RocksDB for persistent storage
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"

# Collections and utilities
dashmap = "5.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Futures for async processing
futures = "0.3"

# Metrics
metrics = "0.23"

# Kotoba types
kotoba-core = { path = "../kotoba-core" }
kotoba-errors = { path = "../kotoba-errors" }
