[package]
name = "kotoba-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Complete query execution and planning engine for Kotoba graph database"
keywords = ["query", "execution", "planner", "gql", "graph-database"]
categories = ["algorithms", "database-implementations"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-execution"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
uuid = { workspace = true, features = ["v4"] }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
kotoba-core = "0.1.21"
kotoba-errors = "0.1.2"
kotoba-graph = "0.1.21"
kotoba-storage = "0.1.21"
