[package]
name = "kotoba-graph"
version = "0.1.0"
edition = "2021"
description = "Kotoba Graph Components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jun784/kotoba"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
kotoba-core = { path = "../kotoba-core", version = "0.1.0" }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
