[package]
name = "kotoba-graph"
version = "0.1.0"
edition = "2021"
description = "Kotoba Graph Components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jun784/kotoba"


authors = ["Jun Kawasaki <jun784@example.com>"]
keywords = ["graph", "data-structure", "vertex", "edge"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-graph"
homepage = "https://github.com/jun784/kotoba"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
kotoba-core = { path = "../kotoba-core", version = "0.1.0" }
uuid = { workspace = true, features = ["v4"] }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
