[package]
name = "kotoba-graph"
version = "0.1.17"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance graph data structures for Kotoba graph processing system"
keywords = ["graph", "data-structure", "vertex", "edge", "database"]
categories = ["data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-graph"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
parking_lot = "0.12"
kotoba-core = { path = "../kotoba-core", version = "0.1.19" }
kotoba-errors = { path = "../kotoba-errors", version = "0.1.1" }
uuid = { workspace = true, features = ["v4"] }
kotoba-cid = { path = "../kotoba-cid" }

[features]
default = ["std"]
std = []
wasm = ["wasm-bindgen", "web-sys", "js-sys"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
