[package]
name = "kotoba-handler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Web Handler for Kotoba ecosystem - integrates server, CLI, and WASM execution"
keywords = ["handler", "web", "http", "wasm", "server", "cli", "integration"]
categories = ["web-programming", "api-bindings", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/kotoba-handler"
homepage = "https://github.com/com-junkawasaki/kotoba"

[dependencies]
# Kotoba ecosystem
kotoba-core = { path = "../kotoba-core", version = "0.1.1" }
kotoba-server = { path = "../kotoba-server", version = "0.1.15" }
kotoba-cli = { path = "../kotoba-cli", version = "0.1.1", optional = true }
kotoba-kotobas = { path = "../kotoba-kotobas", version = "0.1.15" }
kotoba2tsx = { path = "../kotoba2tsx", version = "0.1.15" }
# Jsonnet support removed - using kotobas only

# Async runtime
tokio = { version = "1.0", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }

# HTTP server
hyper = { version = "0.14", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["full"], optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.21", optional = true }

# JSON/WebSocket messaging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.6", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Text",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ReadableStream",
  "ReadableStreamDefaultReader",
] }
js-sys = { version = "0.3", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
uuid = { workspace = true, features = ["v4"] }

# Template engines
tera = { version = "1.19", optional = true }
handlebars = { version = "4.3", optional = true }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite"], optional = true }
redis = { version = "0.23", features = ["tokio-comp"], optional = true }

# Authentication
jsonwebtoken = { version = "9.0", optional = true }
bcrypt = { version = "0.15", optional = true }

# File watching for dev server
notify = { version = "6.0", optional = true }

# Additional utilities
mime_guess = { version = "2.0", optional = true }
base64 = { version = "0.21", optional = true }
url = { version = "2.4", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
urlencoding = "2.1.3"
rand.workspace = true

[features]
default = ["cli", "server"]
cli = ["kotoba-cli", "server"]
server = ["tokio", "futures", "hyper", "tower", "tower-http"]
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "serde-wasm-bindgen", "web-sys", "js-sys"]
websocket = ["server", "tokio-tungstenite"]

# Web development features
web = ["server", "tera", "handlebars", "mime_guess", "url"]
database = ["sqlx", "redis", "chrono"]
auth = ["jsonwebtoken", "bcrypt", "base64"]
dev_server = ["web", "notify"]
templates = ["tera", "handlebars"]

# Jsonnet support removed - using kotobas only
full = ["cli", "server", "wasm", "websocket", "web", "database", "auth", "dev_server", "templates"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
