[package]
name = "kotoba-kotobanet"
description = "Kotoba-specific Jsonnet extensions - HTTP Parser, Frontend Framework, Deploy Config, and Configuration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["jsonnet", "templating", "configuration", "frontend", "deploy"]
categories = ["config", "template-engine", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
regex = "1.10"
uuid = { workspace = true, features = ["v4"] }

# Base Jsonnet implementation
kotoba-jsonnet = { path = "../kotoba-jsonnet", version = "0.1.0" }

# Kotoba core dependencies
kotoba-core = { path = "../kotoba-core", version = "0.1.1" }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
