[package]
name = "kotoba-kotobanet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotoba-specific Jsonnet extensions providing HTTP parsing, frontend framework integration, deployment configuration"
keywords = ["jsonnet", "templating", "configuration", "frontend", "deploy", "infrastructure", "iac"]
categories = ["config", "template-engine", "web-programming", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
regex = "1.10"
uuid = { workspace = true, features = ["v4"] }

# Base Jsonnet implementation
kotoba-jsonnet = { path = "../kotoba-jsonnet", version = "0.1.0" }

# Kotoba core dependencies
kotoba-core = { path = "../kotoba-core", version = "0.1.1" }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
