[package]
name = "kotoba-kotobas"
version = "0.1.16"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "KotobaScript - Declarative programming language for frontend applications, extending Jsonnet with React component definitions"
keywords = ["jsonnet", "programming-language", "frontend", "react", "declarative"]
categories = ["config", "template-engine", "web-programming", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"], optional = true }
regex = "1.10"
uuid = { workspace = true, features = ["v4"] }

# Base Jsonnet implementation
kotoba-jsonnet = { path = "../kotoba-jsonnet", version = "0.1.17" }

# Kotoba core dependencies
kotoba-core = { path = "../kotoba-core", version = "0.1.19" }

# Merkle DAG dependencies
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
