[package]
name = "kotoba-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Kotoba Code Linter - Static analysis tool for .kotoba files"
keywords = ["linter", "static-analysis", "code-quality", "kotoba", "diagnostics"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12"
dirs = { workspace = true }
toml = "0.8"
chrono = { workspace = true }

# Kotoba ecosystem
kotoba-core = { path = "../kotoba-core", version = "0.1.17" }
# kotoba-jsonnet = { path = "../kotoba-jsonnet", version = "0.1.16" } # Temporarily disabled due to compilation issues

[dev-dependencies]
tokio-test = "0.4"
